--- a/beamer/presentation.bib
+++ b/beamer/presentation.bib
@@ -75,7 +75,7 @@
 }
 
 @article{FORMS,
-  author  = {Danny Weyns et al.},
+  author  = {Danny Weyns and Sam Malek and Jesper Andersson},
   title   = {FORMS: Unifying reference model for formal specification of distributed self-adaptive systems},
   journal = {ACM Transactions on Autonomous and Adaptive Systems},
   volume  = {7},
@@ -180,7 +180,7 @@
 }
 
 @article{SurveyOnEngineeringApproaches,
-  author  = {Christian Krupitzer et al.},
+  author  = {Christian Krupitzer and Felix Maximilian Roth and Sebastian VanSyckel and Gregor Schiele and Christian Becker},
   title   = {A survey on engineering approaches for self-adaptive systems},
   journal = {Pervasive and Mobile Computing},
   volume  = {17},
