--- a/sections/conclusion.tex
+++ b/sections/conclusion.tex
@@ -1,23 +1,6 @@
+\newpage
 \section{Conclusion}
 \label{ch:Conclusion}
-
-% TODO:
-% - Is it complete?
-% - Could it be improved?
-% - Limits of this paper
-% - Needs to be applied to more existing approaches
-% - Are there any areas lacking research?
-
-% Hier sollte kurz die eigene Arbeit zusammengefasst werden (Ansatz, verwendete Methoden sowie Art der Evaluation und Ergebnisse). 
-% In diesem Fall ist es 
-% (i) die Entwicklung eines Ansatzes zur Klassifikation von OA für SAS nach 6 Dimensionen. 
-% (ii) exemplarische classification von 3 OA Arbeiten mithilfe des entwickelten Klassifikationsansatzes;
-
-% Formal sollten_
-% - keine Referenzen auf Arbeiten darin genannt werden (falls notwendig, gehöret dass normalerweise in den Abschnitt 'Related work' oder 'Introduction)
-% - keine Aufzählung enthalten sein
-
-% TODO: Themeneinordnung
 
 While there are different approaches to classify and reason about \acrshort{sas}, three of which were highlighted by this paper,
 there is no classification for \acrshort{oa} for \acrshort{sas}.
@@ -55,36 +38,3 @@ Because of this the effect of \acrshort{oa} on \acrshort{sas} can also not be qu
 \noindent Another problem that \acrshort{sas} and their \acrshort{oa} have is that
 most of them are highly domain specific and only try to solve a single domain problem.
 This means that domain independent \acrshort{sas} and \acrshort{oa} for them still require research.
-
-
-
-
-% FIXME: remove old after refactor
-% This paper proposed a classification for \acrlong{oa}[es] for \acrlong{sas}[s].
-% The classification was derived from the same principles as the taxonomy for \acrlong{sas}[s]
-% by Krupitzer et al., 2015 \cite*{SurveyOnEngineeringApproaches}.
-% The main principles that were used to derive the classification are:
-% \begin{itemize}[nosep]
-%     \item The 5W+1H questions by Salehie and Tahvildari, 2009 \cite*{LandscapeAndResearchChallenges}.
-%     \item The MAPE-K feedback loop which was created by Kephart and Chess, 2003 \cite*{VisionOfAutonomicComputing}.
-% \end{itemize}
-
-% To classify \acrshort{oa} the proposed classification provides six dimensions:
-% Location, Time, Purpose, Approach, Technique and Reflective Adaptation Control.
-
-
-% \noindent The Location dimension asks on which level optimizations in a \acrlong{sas} might be necessary.
-% Time distinguishes between \acrshort{oa} that are performed during the design time of the system,
-% during the run time or online phase of the system or approaches that optimize systems during their offline phase.
-% The dimension of Purpose provides a reason for Optimizations to be performed.
-% Approach determines who is responsible for optimizations
-% and Technique states which parts of a \acrshort{sas} can be optimized.
-% Lastly, the Reflective Adaptation Control classifies how optimizations are performed.
-
-% \noindent After proposing a classification, it was exemplarily applied to three existing \acrshort{oa}.
-% This is a part where further research is required. 
-% The classification has to be applied to further existing approaches to verify its validity and completeness.
-
-% \noindent By applying the classification to more approaches, 
-% one could also gain a structured overview over existing approaches.
-% This can be used to identify approaches that have not been explored yet.
