--- a/sections/proposal.tex
+++ b/sections/proposal.tex
@@ -65,9 +65,9 @@ These are:
 \begin{itemize}[nosep]
     \item At the \textit{runtime} of the system, which can also be called the \textit{online phase}
     \item During the \textit{design time} of the system
-    \item While training the system or during its \textit{offline phase}
+    \item During the system's \textit{offline phase}
 \end{itemize}
-The training phase can happen in parallel to the run and design time of the system.
+The offline phase can happen in parallel to the run and design time of the system.
 Examples for this would be when the initial parameters for a \acrshort{sas} are chosen by training a domain model
 or when generating a new model for the system by training an updated domain model parallel to the running system.
 
@@ -116,7 +116,7 @@ How is the optimization applied to the system? \\
 Just like the \acrshort{sas} can be described by its Adaptation Control,
 which is responsible for applying changes to the system,
 an \acrshort{oa} can also be described by how it applies its optimizations to the system.
-In reference to FORMS by Weyns et al., 2012\cite*{FORMS}, which uses reflective operations to change
+In reference to FORMS by Weyns et al. \cite*{FORMS}, which uses reflective operations to change
 components in the system, the Adaptation Control of the \acrshort{oa} will be called \acrshort{rac}.
 The \acrshort{rac} can be classified by the following behaviors:
 \begin{itemize}[nosep]
@@ -165,6 +165,3 @@ These relations between an \acrshort{oa}, the \acrshort{mapek} feedback loop and
     relate to the dimensions of the classification for \acrshort{oa} for \acrshort{sas}.}
     \label{tab:MapeQuestionsOA}
 \end{table}
-
-
-% TODO: Abschluss paragraph
