--- a/sections/sas_classification.tex
+++ b/sections/sas_classification.tex
@@ -125,7 +125,7 @@ The only other self-* property that will be important for the rest of this paper
 \end{figure*}
 
 \noindent The taxonomy for \acrshort{sas} in Figure \ref{fig:KrupitzerTaxonomy}
-is based upon the 5W+1H questions by Salehie and Tahvildari, 2009 \cite*{LandscapeAndResearchChallenges}.
+is based upon the 5W+1H questions by Salehie and Tahvildari \cite*{LandscapeAndResearchChallenges}.
 These questions are: Where, When, What, Why, Who and How.
 Each of these questions is responsible for a different aspect of \acrshort{sas} and corresponds to a dimension of the taxonomy.
 
